[gd_scene load_steps=9 format=3 uid="uid://0xc8hpp1566k"]

[ext_resource type="Script" uid="uid://13rhnf5pffva" path="res://UI/title_screen.gd" id="1_el03b"]
[ext_resource type="Texture2D" uid="uid://bhnev71mmyion" path="res://assets/battle_backgrounds/space.jpg" id="2_816ia"]
[ext_resource type="PackedScene" uid="uid://om1j1at88sjh" path="res://UI/text_window.tscn" id="3_6g7fu"]
[ext_resource type="AudioStream" uid="uid://ypt0ct5wd1v7" path="res://assets/music/space-438391.mp3" id="4_816ia"]
[ext_resource type="PackedScene" uid="uid://cbm0l3xgrf6l7" path="res://UI/login_menu.tscn" id="5_udsnl"]

[sub_resource type="Animation" id="Animation_udsnl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_816ia"]
resource_name = "spin"
length = 60.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 60),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.2831855]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tuktx"]
_data = {
&"RESET": SubResource("Animation_udsnl"),
&"spin": SubResource("Animation_816ia")
}

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_el03b")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(284, 176.00002)
scale = Vector2(0.46614575, 0.5729167)
texture = ExtResource("2_816ia")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BG"]
libraries = {
&"": SubResource("AnimationLibrary_tuktx")
}
autoplay = "spin"

[node name="TitleLabel" type="Label" parent="."]
offset_left = 130.0
offset_top = 38.0
offset_right = 450.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 32
text = "RiftWalker"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -84.0
offset_top = 112.0
offset_right = 84.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="StartGameButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Shop"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Login"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="ChooseBattle" parent="." instance=ExtResource("3_6g7fu")]
visible = false
anchors_preset = -1
anchor_left = 0.266
anchor_top = 0.071
anchor_right = 0.627
anchor_bottom = 0.892
offset_left = -0.216003
offset_top = -0.00400162
offset_right = -0.151978
offset_bottom = -0.00799561

[node name="BattleList" type="VBoxContainer" parent="ChooseBattle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.191
anchor_top = 0.056
anchor_right = 0.827
anchor_bottom = 0.966
offset_left = -3.718
offset_top = -4.896
offset_right = -0.0460052
offset_bottom = 0.0440063
grow_horizontal = 2
grow_vertical = 2

[node name="UIBox" parent="ChooseBattle" instance=ExtResource("3_6g7fu")]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.122
anchor_top = 0.053
anchor_right = 1.865
anchor_bottom = 0.184
offset_left = -1.37599
offset_top = -0.0980005
offset_right = 0.0799866
offset_bottom = 0.0559959
grow_horizontal = 1

[node name="InstructionsLabel" type="Label" parent="ChooseBattle/UIBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.111
anchor_top = 0.2
anchor_right = 0.962
anchor_bottom = 0.912
offset_left = -6.316
offset_right = 1.92799
offset_bottom = 4.08
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 8
text = "Choose a 
starting battle!"

[node name="BackButton" type="Button" parent="ChooseBattle"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -31.0
offset_right = 52.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 8
text = "Return"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_816ia")
autoplay = true
parameters/looping = true

[node name="LoginMenu" parent="." instance=ExtResource("5_udsnl")]
visible = false

[connection signal="pressed" from="VBoxContainer/StartGameButton" to="." method="_on_view_battles_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
